--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <section>
         <h1>Get the freedom you deserve.</h1>
       </section>
+      <section>
+        <h1>Choose Your Plan</h1>
+      </section>
     </main>
   </body>
 </html>
