used inheritance on paragraph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="main.css" />
   </head>
 
@@ -19,6 +23,7 @@
       </section>
       <section id="plans">
         <h1 class="section-title">Choose Your Plan</h1>
+        <p>Make sure you get the most for your money!</p>
       </section>
     </main>
   </body>
