--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li class="main-nav__item">
             <a href="customers/index.html">Customers</a>
           </li>
-          <li class="main-nav__item main-nav__item--cta
+          <li class="main-nav__item main-nav__item--cta">
             <a href="start-hosting/index.html">Start Hosting</a>
           </li>
         </ul>
