--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <h2>$0/month</h2>
             <h3>For hobby projects or small teams.</h3>
             <ul class="plan__features">
-              <li>1 Workspace</li>
-              <li>Unlimited Traffic</li>
-              <li>10GB Storage</li>
-              <li>Basic Support</li>
+              <li class="plan__feature">1 Workspace</li>
+              <li class="plan__feature">Unlimited Traffic</li>
+              <li class="plan__feature">10GB Storage</li>
+              <li class="plan__feature">Basic Support</li>
             </ul>
             <div>
               <button>CHOOSE PLAN</button>
@@ -62,10 +62,10 @@
             <h2>$29/month</h2>
             <h3>For ambitious projects.</h3>
             <ul class="plan__features">
-              <li>5 Workspaces</li>
-              <li>Unlimited Traffic</li>
-              <li>100GB Storage</li>
-              <li>Plus Support</li>
+              <li class="plan__feature">5 Workspaces</li>
+              <li class="plan__feature">Unlimited Traffic</li>
+              <li class="plan__feature">100GB Storage</li>
+              <li class="plan__feature">Plus Support</li>
             </ul>
             <div>
               <button>CHOOSE PLAN</button>
@@ -76,10 +76,10 @@
             <h2>$99/month</h2>
             <h3>Your enterprise solution.</h3>
             <ul class="plan__features">
-              <li>10 Workspaces</li>
-              <li>Unlimited Traffic</li>
-              <li>Unlimited Storage</li>
-              <li>Priority Support</li>
+              <li class="plan__feature">10 Workspaces</li>
+              <li class="plan__feature">Unlimited Traffic</li>
+              <li class="plan__feature">Unlimited Storage</li>
+              <li class="plan__feature">Priority Support</li>
             </ul>
             <div>
               <button>CHOOSE PLAN</button>
