--- a/index.html
+++ b/index.html
@@ -89,18 +89,18 @@
       </section>
       <section id="key-features">
         <h1 class="section-title">Many Good Reasons to Stick Around</h1>
-        <ul>
-          <li>
+        <ul class="key-feature__list">
+          <li class="key-feature">
             <div></div>
-            <p>3,857,000 Trusting Customers</p>
+            <p class="key-feature__description">3,857,000 Trusting Customers</p>
           </li>
-          <li>
+          <li class="key-feature">
             <div></div>
-            <p>99.999% Uptime Guarantee</p>
+            <p class="key-feature__description">99.999% Uptime Guarantee</p>
           </li>
-          <li>
+          <li class="key-feature">
             <div></div>
-            <p>Lightning Fast CDN</p>
+            <p class="key-feature__description">Lightning Fast CDN</p>
           </li>
         </ul>
       </section>
