added class feature-key__image + styled it

--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
         <h1 class="section-title">Many Good Reasons to Stick Around</h1>
         <ul class="key-feature__list">
           <li class="key-feature">
-            <div></div>
+            <div class="key-feature__image"></div>
             <p class="key-feature__description">3,857,000 Trusting Customers</p>
           </li>
           <li class="key-feature">
-            <div></div>
+            <div class="key-feature__image"></div>
             <p class="key-feature__description">99.999% Uptime Guarantee</p>
           </li>
           <li class="key-feature">
-            <div></div>
+            <div class="key-feature__image"></div>
             <p class="key-feature__description">Lightning Fast CDN</p>
           </li>
         </ul>
