--- a/index.html
+++ b/index.html
@@ -105,5 +105,17 @@
         </ul>
       </section>
     </main>
+    <footer>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">Support</a>
+          </li>
+          <li>
+            <a href="#">Terms of Use</a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
