--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="main-footer">
       <nav>
         <ul>
           <li>
