added classes for ul and li in footer

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
     </main>
     <footer class="main-footer">
       <nav>
-        <ul>
-          <li>
+        <ul class="main-footer__links">
+          <li class="main-footer__link">
             <a href="#">Support</a>
           </li>
-          <li>
+          <li class="main-footer__link">
             <a href="#">Terms of Use</a>
           </li>
         </ul>
