--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="shared.css" />
     <link rel="stylesheet" href="main.css" />
   </head>
 
