--- a/packages/index.html
+++ b/packages/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="../shared.css" />
     <link rel="stylesheet" href="packages.css" />
   </head>
-
   <body>
     <header class="main-header">
       <div>
@@ -32,7 +31,37 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <a href="#">
+          <h1>Our PLUS Plan</h1>
+          <h2>The most popular choice of our customers.</h2>
+          <p>
+            Benefit from increased storage and faster support to ensure that
+            your mission-critical data and applications are always available!
+          </p>
+        </a>
+      </section>
+      <section>
+        <a href="#">
+          <h1>Our FREE Plan</h1>
+          <h2>An extremely solid start into our hosting world.</h2>
+          <p>Get started immediately at zero cost!</p>
+        </a>
+      </section>
+      <section>
+        <a href="#">
+          <h1>Our PREMIUM Plan</h1>
+          <h2>
+            All your enterprise needs. Instant support, guaranteed uptime.
+          </h2>
+          <p>
+            The best solution for small to large enterprises. Because hosting
+            shouldn't be in the way!
+          </p>
+        </a>
+      </section>
+    </main>
     <footer class="main-footer">
       <nav>
         <ul class="main-footer__links">
