added class to section

--- a/packages/index.html
+++ b/packages/index.html
@@ -32,7 +32,7 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="package">
         <a href="#">
           <h1>Our PLUS Plan</h1>
           <h2>The most popular choice of our customers.</h2>
@@ -42,14 +42,14 @@
           </p>
         </a>
       </section>
-      <section>
+      <section class="package">
         <a href="#">
           <h1>Our FREE Plan</h1>
           <h2>An extremely solid start into our hosting world.</h2>
           <p>Get started immediately at zero cost!</p>
         </a>
       </section>
-      <section>
+      <section class="package">
         <a href="#">
           <h1>Our PREMIUM Plan</h1>
           <h2>
