--- a/packages/index.html
+++ b/packages/index.html
@@ -34,9 +34,11 @@
     <main>
       <section class="package">
         <a href="#">
-          <h1>Our PLUS Plan</h1>
-          <h2>The most popular choice of our customers.</h2>
-          <p>
+          <h1 class="package__title">Our PLUS Plan</h1>
+          <h2 class="package__subtitle">
+            The most popular choice of our customers.
+          </h2>
+          <p class="package__info">
             Benefit from increased storage and faster support to ensure that
             your mission-critical data and applications are always available!
           </p>
@@ -44,18 +46,20 @@
       </section>
       <section class="package">
         <a href="#">
-          <h1>Our FREE Plan</h1>
-          <h2>An extremely solid start into our hosting world.</h2>
-          <p>Get started immediately at zero cost!</p>
+          <h1 class="package__title">Our FREE Plan</h1>
+          <h2 class="package__subtitle">
+            An extremely solid start into our hosting world.
+          </h2>
+          <p class="package__info">Get started immediately at zero cost!</p>
         </a>
       </section>
       <section class="package">
         <a href="#">
-          <h1>Our PREMIUM Plan</h1>
-          <h2>
+          <h1 class="package__title">Our PREMIUM Plan</h1>
+          <h2 class="package__subtitle">
             All your enterprise needs. Instant support, guaranteed uptime.
           </h2>
-          <p>
+          <p class="package__info">
             The best solution for small to large enterprises. Because hosting
             shouldn't be in the way!
           </p>
