--- a/packages/index.html
+++ b/packages/index.html
@@ -32,7 +32,7 @@
       </nav>
     </header>
     <main>
-      <section class="package">
+      <section class="package" id="plus">
         <a href="#">
           <h1 class="package__title">Our PLUS Plan</h1>
           <h2 class="package__subtitle">
@@ -44,7 +44,7 @@
           </p>
         </a>
       </section>
-      <section class="package">
+      <section class="package" id="free">
         <a href="#">
           <h1 class="package__title">Our FREE Plan</h1>
           <h2 class="package__subtitle">
@@ -53,7 +53,7 @@
           <p class="package__info">Get started immediately at zero cost!</p>
         </a>
       </section>
-      <section class="package">
+      <section class="package" id="premium">
         <a href="#">
           <h1 class="package__title">Our PREMIUM Plan</h1>
           <h2 class="package__subtitle">
