added background container

--- a/packages/index.html
+++ b/packages/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="packages.css" />
   </head>
   <body>
+    <div class="background"></div>
     <header class="main-header">
       <div>
         <a href="../index.html" class="main-header__brand"> uHost </a>
